--- a/themes/Acetolog/_config.yml
+++ b/themes/Acetolog/_config.yml
@@ -31,7 +31,7 @@ disqus:
 
 contact:
   enable: true
-  description: 17326068766
+  description: try to keep real
 
   twitter:
     enable: false
@@ -46,11 +46,11 @@ contact:
     username: weibo_username
 
   facebook:
-    enable: false
+    enable: true
     username: facebook_username
 
   instagram:
-    enable: false
+    enable: true
     username: instagram_username
 
 
