--- a/themes/Acetolog/_config.yml
+++ b/themes/Acetolog/_config.yml
@@ -4,13 +4,13 @@ Home: /
 
 language: en
 
-author: 
-description: blog
+# author: 
+# description: blog
 
 # AvatorURL
 # it would be shown on sidecar.
 
-avatar: https://yourAvatorURL
+avatar: https://i.loli.net/2020/05/06/W4GL5biFypY8J7c.jpg
 
 # Comment
 
